<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".formularioinfovida">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ColorBody">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ColorBody"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Titulo_formulario_vida"
                android:textColor="@color/ColorText"
                android:textSize="@dimen/tamanho_titulo"
                android:typeface="serif" />

            <!--Tipo Vivienda-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distancia"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margenTexto"
                    android:layout_weight="8"
                    android:text="@string/Tipo_Vivienda"
                    android:textColor="@color/ColorText" />

                <EditText
                    android:id="@+id/etVivienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margenderecho"
                    android:layout_weight="4"
                    android:textColor="@color/ColorText" />
            </LinearLayout>

            <!--Estado Civil-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distancia"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margenTexto"
                    android:layout_weight="8"
                    android:text="@string/Tipo_Convivencia"
                    android:textColor="@color/ColorText" />

                <Spinner
                    android:id="@+id/spConvivencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margenderecho"
                    android:layout_weight="4"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/ColorText" />

            </LinearLayout>

            <!--Horas de Trabajo-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distancia"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margenTexto"
                    android:layout_weight="8"
                    android:text="@string/Horas_Trabajo"
                    android:textColor="@color/ColorText" />

                <EditText
                    android:id="@+id/etHorasTrabajo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margenderecho"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:textColor="@color/ColorText" />
            </LinearLayout>

            <!--Ingreso Anual-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distancia"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margenTexto"
                    android:layout_weight="8"
                    android:text="@string/Ingreso_anual"
                    android:textColor="@color/ColorText" />

                <EditText
                    android:id="@+id/etIngresoAnual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margenderecho"
                    android:layout_weight="4"
                    android:inputType="numberDecimal"
                    android:textColor="@color/ColorText" />
            </LinearLayout>

            <!--Número de Hijos-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distancia"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margenTexto"
                    android:layout_weight="8"
                    android:text="@string/Hijos"
                    android:textColor="@color/ColorText" />

                <EditText
                    android:id="@+id/etHijos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margenderecho"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:textColor="@color/ColorText" />
            </LinearLayout>


            <!--Mascota-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distancia"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margenTexto"
                    android:layout_weight="8"
                    android:text="Mascota"
                    android:textColor="@color/ColorText" />

                <Spinner
                    android:id="@+id/spMascota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margenderecho"
                    android:layout_weight="4"
                    android:textColor="@color/ColorText" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGuardarVida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Guardar" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>